Fixed build.gradle issues and added modules to the project.